samples/_failures_safe/1761446879_aae7b7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c5985025.c: In function ‘display_recent_logs’:
./samples/SAFE/__tmp_c5985025.c:138:16: error: missing terminating " character
  138 |         printf("[
      |                ^~
./samples/SAFE/__tmp_c5985025.c:138:9: error: expected expression at end of input
  138 |         printf("[
      |         ^~~~~~
./samples/SAFE/__tmp_c5985025.c:138:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c5985025.c:138:9: error: expected declaration or statement at end of input
